upload new site

--- a/_posts/2015-09-19-SFD2015.markdown
+++ b/_posts/2015-09-19-SFD2015.markdown
@@ -2,23 +2,57 @@
 layout: post
 title:  "SFD2015 活动记录"
 date:   2015-09-19 14:00:00
-categories: jekyll update
+categories: xdlinux 
 ---
+  
+2015年9月19日，又是一年一度的SFD，西电开源社区在大活511举办了今年的活动。  
+  
+我们今年邀请到了来自 G(杜绝广告)fe 的 Iris Gou 学姐（阿姨），来自 Xi'an GDG 的 谢凌 （学长），来自 Mozilla 的工程师 赵博通，来自 (杜绝广告)乎 的*著名开发者* 李明亮。哦还有最后一个，来自西电开源社区的 lumin 就不需要邀请了。
+   
+![iris](/p/IMG_7810.JPG.jpg)
+美丽的Iris阿姨的演讲题目为“Git助力学生团队协作”。  
+开源界中广泛使用的Git可以使用在校园生活中的方方面面，尤其涉及团队协作时Git更是给力。不仅团队协作，Iris还介绍了
+Git一个丧病的用途：帮助老师给大作业评分。(这事情千万不能发生，当老师用git blame来检查作业或者检查git commit内容及时间戳时...)  
+随后Iris还介绍了Git的一些基本概念，用法和原理。  
+  
+![xie](/p/IMG_7848.JPG.jpg)
+老朋友 谢凌 学长介绍了一些开源软件项目，以及开源软件对世界产生的影响。
+  
+![zhao](/p/IMG_7858.JPG.jpg)
+来自火狐的工程师 赵博通 的主题为“Firefox让您的隐私更安全”。
+  
+![li1](/p/IMG_7867.JPG.jpg)  
+来自X乎的 *著名开发者* 李明亮 同大家分享了一些实习经历等等。
 
-You'll find this post in your `_posts` directory - edit this post and re-build (or run with the `-w` switch) to see your changes!
-To add new posts, simply add a file in the `_posts` directory that follows the convention: YYYY-MM-DD-name-of-post.ext.
-
-Jekyll also offers powerful support for code snippets:
-
-{% highlight ruby %}
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
-{% endhighlight %}
-
-Check out the [Jekyll docs][jekyll] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll's GitHub repo][jekyll-gh].
-
-[jekyll-gh]: https://github.com/jekyll/jekyll
-[jekyll]:    http://jekyllrb.com
+![li2](/p/IMG_7868.JPG.jpg)  
+亮哥好像讲的很高兴的样子。
+  
+![l1](/p/IMG_7878.JPG.jpg)  
+Lumin 的主题为"Things you should know about software freedom"。
+没错，这就是典型的“开源大法好，退软保平安”洗脑演讲。
+  
+![l2](/p/IMG_7884.JPG.jpg)
+一大波礼品正在靠近 -- 诶？好像有奇怪的东西混进去了。
+ 
+![a1](/p/IMG_7847.JPG.jpg)
+![a2](/p/IMG_7881.JPG.jpg)
+听众们踊跃提问。  
+  
+![p1](/p/IMG_7804.JPG.jpg)
+工作人员正在忙碌地准备场地。  
+  
+![p2](/p/IMG_7889.JPG.jpg)
+工作人员正在分发奖品。  
+  
+![e1](/p/IMG_7892.JPG.jpg)
+大狐狸，最受欢迎的礼物。  
+  
+据学妹反馈，5场演讲中谢凌的和lumin的比较好，另外三个。（这句话我真的写完了）
+  
+感谢各位到场的嘉宾，感谢各位听众！  
+  
+SFD晚上场为Linux Install Party，原计划是动员大家用虚拟机尝试Ubuntu。然而鉴于来的人都没有带上自己的计算机(......)，
+于是主持lumin很机智地将晚上的主题改成了 ArchLinux Install Party，并为大家演示了 Arch Linux 的标准安装过程。  
+据当晚的听众反馈：“不明但觉厉”  
+  
+至此，SFD2015西电站顺利结束！
