--- a/_posts/2015-09-19-SFD2015.markdown
+++ b/_posts/2015-09-19-SFD2015.markdown
@@ -56,3 +56,6 @@ SFD晚上场为Linux Install Party，原计划是动员大家用虚拟机尝试U
 据当晚的听众反馈：“不明但觉厉”  
   
 至此，SFD2015西电站顺利结束！
+  
+附件下载：  
+1. [Lumin的ppt](/p/2015.sfd.pdf)
